// MongoDB/NoSQL dbdiagram.io format for Kazewebsite

Table User {
  _id ObjectId [pk]
  name string
  email string [unique]
  password string
  phone string
  role string
  address string
  image string
  vouchers string[]
  gender string
  dob date
  isActive boolean
  resetPasswordToken string
  resetPasswordExpiry datetime
}

Table Product {
  _id ObjectId [pk]
  name string
  slug string
  description string
  brand string
  category ObjectId [ref: > Category._id]
  attributes object // {sizes: [], colors: []}
  variants object[] // [{attributes, stock, price, costPrice, images}]
  images string[]
  price number
  costPrice number
  stock number
  isActive boolean
  rating number
  reviewCount number
  reviews ObjectId[] [ref: > CommentUser._id]
}

Table Category {
  _id ObjectId [pk]
  name string
  image string
  parentId ObjectId [ref: - Category._id]
}

Table Cart {
  _id ObjectId [pk]
  userId ObjectId [ref: > User._id, unique]
  items object[] // [{productId, quantity, color, size, priceAtTimeOfAddition}]
}

Table Bill {
  _id ObjectId [pk]
  nguoi_dung_id ObjectId [ref: > User._id]
  dia_chi_giao_hang string
  tong_tien number
  phuong_thuc_thanh_toan string
  ghi_chu string
  trang_thai string
  thanh_toan string
  ly_do_huy string
  nguoi_huy object // {id: ObjectId [ref: > User._id], loai: string}
  ngay_tao datetime
  ngay_cap_nhat datetime
  danh_sach_san_pham object[] // [{san_pham_id: ObjectId [ref: > Product._id], so_luong, gia, mau_sac, kich_thuoc}]
}

Table CommentUser {
  _id ObjectId [pk]
  productId ObjectId [ref: > Product._id]
  userId ObjectId [ref: > User._id]
  content string
  rating number
  orderId ObjectId [ref: > Bill._id]
  status string
  adminReply object
  reports object[]
  isHidden boolean
}
